--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -157,13 +157,17 @@
                 android:layout_height="wrap_content"
                 android:text="combineLatestActivity的基本用法"/>
 
-
             <Button
                 android:id="@+id/rangeActivity"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Range 操作符的基本用法"/>
 
+            <Button
+                android:id="@+id/deferActivity"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Defer 操作符的基本用法"/>
 
             <Button
                 android:id="@+id/handlerThreadActivity2"
