--- a/app/src/main/res/layout/activity_range.xml
+++ b/app/src/main/res/layout/activity_range.xml
@@ -3,10 +3,55 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="app.com.myapplication.RangeActivity">
+
+
+    <TextView
+        android:id="@+id/tv1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+       android:textSize="20sp"
+        />
+
+    <TextView
+        android:id="@+id/tv2"
+        android:layout_below="@id/tv1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        />
+
+    <Button
+        android:id="@+id/cancle"
+        android:layout_below="@id/tv2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="取消注册"
+        />
+
+    <Button
+        android:id="@+id/find"
+        android:layout_below="@id/cancle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="查询是否取消注册"
+        />
+
+    <Button
+        android:id="@+id/find2"
+        android:layout_below="@id/find"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="查询是否为空"
+        />
+
+    <Button
+        android:id="@+id/start"
+        android:layout_below="@id/find2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="开始"
+        />
+
 
 </RelativeLayout>
